public/style.css
body{background-color:#616262;
max-height:100vh;
font-family:Barlow;
color:white;
overflow-y:hidden;
overflow-x:hidden;
}

#toggle{opacity:0;}

#city{margin-left:44vw;
margin-right:44vw;
margin-top:-2vh;
position: absolute;
z-index:6}



.weather-icon{
position:relative;
top:-10vh;

left:38vw;
right:38vw;
z-index:0;
}


#location {
    margin: 50px 100px;
    position: relative;
    float: right;
    padding: 0;
    position: relative;
  }
  
  input[type="search"] {
    height: 60px;
    font-size: 32px;
    display: inline-block;
    font-family: "Lato";
    font-weight: 100;
    border: none;
    outline: none;
    color: white;
    padding: 3px;
    padding-right: 60px;
    width: 0px;
    position: absolute;
    top: -10vh;
    right: -5vw;
    margin-right:20px;
    background: none;
    z-index: 6;
    transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
    cursor: pointer;
  }
  
  input[type="search"]:focus:hover {
    border-bottom: 1px solid #BBB;
  }
  
  input[type="search"]:focus {
    width: 200px;
    z-index: 1;
    border-bottom: 1px solid #BBB;
    cursor: text;
  }
  input[type="submit"] {
    height: 67px;
    width: 63px;
    display: inline-block;
    color:white;
    float: right;
    background: url("./assets/search.png") center center no-repeat;
    text-indent: -10000px;
    border: none;
    position: absolute;
    top: -10vh;
    right: -5vw;
    z-index: 2;
    cursor: pointer;
    opacity: 0.4;
    cursor: pointer;
    transition: opacity .4s ease;
  }
  
  input[type="submit"]:hover {
    opacity: 0.8;
  }
#conditions{font-size:3vh;
position:absolute;
margin-top:10vh;
margin-left:40vw;
margin-right:40vw;
}

.ribbon{   height:40vh;
    width:5.5vw;
    margin-right:4vw;
    
}  
.weekday{position:absolute;
    margin-left:.4vw;
    z-index:3;
font-size:1vh;}

.forecast-icon{position:absolute;
margin-top:2vh;
z-index:3;
margin-left:.5vw;
margin-right:.5vw;

}


.high-forecast{
    margin-left:1.8vw;
    margin-right:1.8vw;
    position:absolute;
margin-top:9vh;
font-size:2vh;

}
.low-forecast{
    margin-left:1.8vw;
    margin-right:1.8vw;
    position:absolute;
    margin-top:12vh;
    font-size:2vh;
    }

.etc-weather{margin-left:1vw;
margin-right:1vw;
font-family:Barlow;
font-size:2vh;
}
.etc-weather-results{
font-size:2vh;
margin-left:2vw;
font-family:Barlow;

}




.ribbon-image{position:absolute;
z-index:0;
height:40vh;
width:5.5vw;
} 




#temp{
position:relative;
top:4vh;
font-family:Rockwell;
font-size:6vw;
-webkit-text-stroke: 2px white;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  margin-left:38vw;
z-index:4;
}

#squares{
position:relative;
display:flex;
left:27.8vw;
right:27.8vw;
top:15vh;

z-index:5;
}

.square{height:11.75vh;
    
    width:7vw;
    margin-right:1vw;
    border-style:solid;
    border-width:.5px;
    border-radius:14px;
background-color:#7A7C7C;
border-color:#707070;
box-shadow:1px 1px 2px black;} 
#weekly-forecast{

position:relative;
display:flex;
margin-left:22vw;
margin-top:16vh;
margin-right:22vw;

}


.backdrop{
    margin-top:-22vh;
    background-color:#69798B;
    width:90vw;
    height:50vh;
    margin-left:5vw;
    margin-right:5vw;
    border-radius:81px;
    border-style:solid;
    border-color:#707070;
    border-width:0.5px;
    
    z-index:-5;
    

}

#hi-lo{
    position:absolute;
    margin-left:80vw;
    
    margin-top:-10vh;
}

@media only screen and (max-width: 1200px) {


.ribbon{   height:40vh;
    width:76px;
    margin-right:4vw;
    
}  
.ribbon-image{   height:40vh;
    width:76px;
    margin-right:4vw;
    
}  

}

@media only screen and (max-width: 800px) {

    .ribbon{   height:40vh;
        width:76px;
        margin-right:4vw;
        
    }  
    .ribbon-image{   height:40vh;
        width:76px;
        margin-right:4vw;
        
    }  
}
  @media only screen and (max-width: 600px) {


.etc-weather-results{font-size:12px;
margin-top:-12px}

.etc-weather{font-size:1.5vh;
margin-left:3vw;
margin-right:3vw;}

#city{font-size:4vh;
    margin-left:34vw;
    margin-right:34vw;
    margin-top:-24vh;
    position: absolute;
    z-index:-3;
width:200px;}

    #current{position:absolute;
        top:25vh;}

        .weather-icon{
            position:relative;
            top:-20vh;
            left:25vw;
            right:25vw;
            z-index:0;
            width: initial;
            }
            
    .backdrop{
        margin-top:20vh;
        width:90vw;
        height:56vh;
        margin-left:5vw;
        margin-right:5vw;
        border-radius:29px;
        border-style:solid;
        border-color:#707070;
        border-width:0.5px;
        

        
    
    }


#squares{
    position:relative;
    display:flex;
    left:16vw;
    right:16vw;
    top:20vh;
    
    z-index:5;
    }

.ribbon{   height:40vh;
    width:5.5vw;
    margin-right:10vw;
}  



.ribbon-image{position:absolute;
    z-index:0;
    height:280px;
    width:80px}

#weekly-forecast{

        position:absolute;
        display:flex;
        margin-left:8vw;
        margin-top:22vh;

        margin-right:8vw;
        
        }
        

        .square{height:64px;
    
            width:68px;
        

  }



#temp{
    position:absolute;
    font-family:Rockwell;
    font-size:12vh;
    top:-18vh;
    -webkit-text-stroke: 2px white;
      -webkit-text-fill-color: transparent;
      -webkit-background-clip: text;
      margin-left:26vw;
      
    z-index:4;
    }



    #conditions{font-size:5vh;
        position:absolute;
        margin-top:14vh;
        margin-left:33vw;
    margin-right:33vw;}



        .high-forecast{
            margin-left:5vw;
            position:absolute;
        margin-top:8vh;
        font-weight:bold;
        }
        .low-forecast{
            margin-left:5.2vw;
            font-weight:bold;
            margin-top:11vh;
        }


        .weekday{position:absolute;
            margin-left:.4vw;
            z-index:3;
        font-size:1.5vh;
    font-weight:bold;}


    .forecast-icon{position:absolute;
        margin-top:2vh;
        z-index:3;
        margin-left:2vw;
        
        }


        #hi-lo{
            position:absolute;
           
            margin-top:-8vh;
        }


    #location{position:absolute;
    top:-24vh;
left:75vw;}
}


@media only screen and (max-width: 450px) {
.backdrop{margin-left:4w;}
#weekly-forecast{
    margin-left:4vw;
    margin-right:4vw

}
#city{margin-left:40vw;}
#squares{left:8vw;}


#conditions{margin-left:30vw;}



.weather-icon{
    position:relative;
    top:-16vh;
    
    left:14vw;
    z-index:0;
    }
#hi-lo{margin-top:0;
margin-left:5vw;}
#search_submit{
  right:85vw;
  margin-top:2vh;
  }

  input[type="search"]:focus {
    width: 200px;
    z-index: 1;
    border-bottom: 1px solid #BBB;
    cursor: text;
  }

}

